<resources>
    <string name="register_button_label">Save Data</string>
    <string name="phone_text_field_label">Phone *</string>
    <string name="email_text_field_label">Email *</string>
    <string name="username_text_field_label">Username *</string>
    <string name="registration_title">Registration</string>
    <string name="required_text_field">required.</string>
    <string name="please_enter_valid_username_error_msg">User Name  must be at least 3 characters</string>
    <string name="please_enter_valid_email_error_msg">Email must be a valid email address</string>
    <string name="please_enter_valid_phone_error_msg">Phone number must be 11 digits</string>
    <string name="please_enter_valid_password_error_msg">Password must be at least 8 characters</string>
    <string name="password_text_field_label">Password *</string>
    <string name="database_error_msg">We encounter issue connecting to database</string>
    <string name="something_went_wrong_msg">Something went wrong</string>
    <string name="camera_permission_msg">Please grant the permission to use the camera to use the core functionality of this app.</string>
    <string name="grant_permission_label">Grant permission</string>
    <string name="please_enable_camera_permission_msg">Please enable camera permission in settings.</string>
    <string name="camera_permission_is_required_msg">Camera permission is required</string>
</resources>