<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/registration_title"
        app:titleCentered="true" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_input_layout"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_text_field_label"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MyApp.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text|textNoSuggestions"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/email_text_field_label"
                app:endIconMode="clear_text"
                app:errorEnabled="true"

                app:layout_constraintTop_toBottomOf="@+id/user_name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MyApp.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_layout"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/phone_text_field_label"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MyApp.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/password_text_field_label"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/phone_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MyApp.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loading_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorColor="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="@id/save_data_button"
                app:layout_constraintEnd_toEndOf="@id/save_data_button"
                app:layout_constraintStart_toStartOf="@id/save_data_button"
                app:layout_constraintTop_toTopOf="@id/save_data_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_data_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:insetTop="1dp"
                android:insetBottom="1dp"
                android:text="@string/register_button_label"
                app:cornerRadius="45dp"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>